force-app/main/default/objects/Communication__c/fields/Additinal_Emails_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Additinal_Emails_Milestone__c</fullName>
    <label>Additinal Emails Milestone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>