force-app/main/default/objects/Communication__c/fields/Additinal_Emails_Task_Ready__c.field-meta.xml
<CustomField>
    <fullName>Additinal_Emails_Task_Ready__c</fullName>
    <label>Additinal Emails Task Ready</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>