force-app/main/default/objects/Communication__c/fields/Additional_Emails_Advanced_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails_Advanced_Notifications__c</fullName>
    <label>Additional Emails Advanced Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>