force-app/main/default/objects/Communication__c/fields/Additional_Emails_Completed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails_Completed__c</fullName>
    <label>Additional Emails Completed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>