force-app/main/default/objects/Communication__c/fields/Additional_Phone_Advanced_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Advanced_Notifications__c</fullName>
    <label>Additional Phone Advanced Notifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>