force-app/main/default/objects/Communication__c/fields/Additional_Phone_Completed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Completed__c</fullName>
    <label>Additional Phone Completed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>