force-app/main/default/objects/Communication__c/fields/Additional_Phone_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Milestone__c</fullName>
    <inlineHelpText>,(comma) separated mails</inlineHelpText>
    <label>Additional Phone Milestone</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>