force-app/main/default/objects/Communication__c/fields/Additional_Phone_Task_Ready__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Task_Ready__c</fullName>
    <label>Additional Phone Task Ready</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>