force-app/main/default/objects/Communication__c/fields/Advanced_Notifications_Members__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Notifications_Members__c</fullName>
    <label>Advanced Notifications Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>