force-app/main/default/objects/Communication__c/fields/Completed_Mails__c.field-meta.xml
<CustomField>
    <fullName>Completed_Mails__c</fullName>
    <label>Completed Mails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>