force-app/main/default/objects/Communication__c/fields/Completed_Members__c.field-meta.xml
<CustomField>
    <fullName>Completed_Members__c</fullName>
    <label>Completed Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>