force-app/main/default/objects/Communication__c/fields/Completed_Phones__c.field-meta.xml
<CustomField>
    <fullName>Completed_Phones__c</fullName>
    <label>Completed Phones</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>