force-app/main/default/objects/Communication__c/fields/Default_Owner_Advanced_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner_Advanced_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Owner Advanced Notifications</label>
    <type>Checkbox</type>
</CustomField>