force-app/main/default/objects/Communication__c/fields/Default_Team_Completed__c.field-meta.xml
<CustomField>
    <fullName>Default_Team_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Team Completed</label>
    <type>Checkbox</type>
</CustomField>