force-app/main/default/objects/Communication__c/fields/Default_Team_Task_ready__c.field-meta.xml
<CustomField>
    <fullName>Default_Team_Task_ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Team Task ready</label>
    <type>Checkbox</type>
</CustomField>