force-app/main/default/objects/Communication__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <formula>Task__r.Milestone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone</label>
    <type>Checkbox</type>
</CustomField>