force-app/main/default/objects/Communication__c/fields/MileStone_for_default_Imp_Mngrs__c.field-meta.xml
<CustomField>
    <fullName>MileStone_for_default_Imp_Mngrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MileStone for default Imp Mngrs</label>
    <type>Checkbox</type>
</CustomField>