force-app/main/default/objects/Communication__c/fields/Milestone_Mails__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Mails__c</fullName>
    <label>Milestone Mails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>