force-app/main/default/objects/Communication__c/fields/Milestone_Members__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Members__c</fullName>
    <label>Milestone Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>