force-app/main/default/objects/Communication__c/fields/Milestone_Phones__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Phones__c</fullName>
    <label>Milestone Phones</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>