force-app/main/default/objects/Communication__c/fields/Ready_Mails__c.field-meta.xml
<CustomField>
    <fullName>Ready_Mails__c</fullName>
    <label>Ready Mails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>