force-app/main/default/objects/Communication__c/fields/Ready_Phones__c.field-meta.xml
<CustomField>
    <fullName>Ready_Phones__c</fullName>
    <label>Ready Phones</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>