force-app/main/default/objects/Communication__c/fields/SOE__c.field-meta.xml
<CustomField>
    <fullName>SOE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOE</label>
    <referenceTo>SOE__c</referenceTo>
    <relationshipLabel>Communications</relationshipLabel>
    <relationshipName>Communications</relationshipName>
    <type>Lookup</type>
</CustomField>