force-app/main/default/objects/Communication__c/fields/Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed__c</fullName>
    <formula>Task__r.Task_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Completed</label>
    <type>Checkbox</type>
</CustomField>