force-app/main/default/objects/Communication__c/fields/Task_Ready__c.field-meta.xml
<CustomField>
    <fullName>Task_Ready__c</fullName>
    <formula>Task__r.When_Task_Ready__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Ready</label>
    <type>Checkbox</type>
</CustomField>