force-app/main/default/objects/Communication__c/fields/Task_Ready_Members__c.field-meta.xml
<CustomField>
    <fullName>Task_Ready_Members__c</fullName>
    <label>Task Ready Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>